# terraform-fastapi-eks-kong

./: .gitignore  README.md  other-useful-commands.md
1-eks-deployment/: README.md  eks.tf  fargate-nginx.yaml  main.tf  ngnix-service.yaml  outputs.tf  terraform.tfvars  variables.tf  vpc.tf
2-kong-ingress/: README.md
2-kong-ingress/helm/: Chart.yaml  values.yaml
2-kong-ingress/helm/templates/fastapi/: ingress.yaml  service.yaml
3-cognito-setup/: README.md  main.tf  output.tf  variables.tf
4-fastapi-deployment/: Dockerfile  README.md  main.tf  output.tf  terraform.tfvars  variables.tf
4-fastapi-deployment/app/: main.py  pyproject.toml  requirements.txt
4-fastapi-deployment/helm/: Chart.yaml  wide
4-fastapi-deployment/helm/templates/fastapi/: ingress.yaml  service.yaml
