[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["raghurana"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.7"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
boto3 = "^1.36.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
